--- a/Calculator.css
+++ b/Calculator.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Rubik Mono One";
+    src: url(https://html-calculator.netlify.app/Rubik_Mono_One/RubikMonoOne-Regular.ttf) format("truetype");
+}
+
 * {
 	background-color: #2eaa32;
 	color: #000000;
