--- a/Calculator.css
+++ b/Calculator.css
@@ -11,14 +11,11 @@
 body {
 	background-color: #2eaa32;
 	color: #000000;
-}
-
-body {
 	font-family: "Rubik Mono One";
     font-size: 20px;
 }
 
-strong#smol {
+#smol {
 	font-size: 10px;	
 }
 
@@ -26,12 +23,52 @@ strong#key {
 	color: #000000;
 }
 
-p#key {
+.dropbtn {
+  background-color: black;
+  color: white;
+  font-size: 20;
+  padding: 6px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #303030;
+}
+
+.dropdown {
+  position: relative;
+  /* display: inline-block; */
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #000000;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #303030;}
+
+.show {display: block;}
+
+/* p#key {
 	font-weight: bold;
 	margin-left: 40px;
 	font-family: "Fira Code";
 	font-size: medium;
-}
+} */
 
 .input {
 	background-color: #000000;
@@ -50,19 +87,19 @@ p#key {
 	background-color: #000000;
 	color: white;
 	padding: 6px 20px;
-	margin: 8px 8px 8px 220px;
+	/* margin: 8px 8px 8px 220px; */
 	border: none;
 	cursor: pointer;
 	border-radius: 3px;
 }
 
-#result {
-	text-align: center;
-	font-size: 35px;
+#equals {
+	text-align: left;
 }
 
-#equals {
-	margin: 0px 0px 0px 220px;
+#result {
+	text-align: left;
+	font-size: 35px;
 }
 
 .btn {
@@ -70,27 +107,28 @@ p#key {
 	background-color: #000000;
 	color: white;
 	padding: 14px 20px;
-	margin: 8px 8px 8px 207px;
+	/* margin: 8px 8px 8px 207px; */
 	border: none;
 	cursor: pointer;
 	text-align: center;
 	border-radius: 3px;
 }
 
-.btn#calculate2 {
-	margin: 0px 0px 0px 170px;
-}
-
 .hoverChange:hover {
 	background-color: #303030;
 }
 
-.row {
-	display: flex;
+.basicGrid {
+	display: grid;
+	gap: 1rem;
+	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 }
 
-.column2 {
-	flex: 50%;
+.center {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 @media only screen and (max-width: 600px) {
@@ -108,5 +146,12 @@ p#key {
 	width: 300px;
 	text-align: center;
 	border-radius: 3px;
-}
+	}
+/* 
+	#modifier {
+		margin: 0px 0px 0px 0px;
+	}
+	.btn {
+		margin: 0px 0px 0px 0px;
+	} */
 }
