--- a/Calculator.css
+++ b/Calculator.css
@@ -50,10 +50,12 @@ strong#key {
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  font-size: 20px;
 }
 
 .dropdown-content a {
   color: white;
+  font-size: 20px;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
