--- a/Calculator.css
+++ b/Calculator.css
@@ -10,9 +10,13 @@ body {
     font-size: 20px;
 }
 
-strong#key {
-	color: #000000;
+#key {
 	font-family: "Fira Code", monospace;
+}
+
+#keyTitle {
+	color: #000000;
+	font-family: "Rubik Mono One", sans-serif;
 }
 
 .dropbtn {
@@ -77,7 +81,7 @@ strong#key {
 }
 
 #modifier {
-	font-family: "Rubik Mono One";
+	font-family: "Fira Code";
 	background-color: #000000;
 	color: white;
 	padding: 6px 20px;
