--- a/Calculator.css
+++ b/Calculator.css
@@ -52,7 +52,7 @@ body {
 
 .dropdown-content a {
   color: white;
-  font-size: 20px;
+  font-size: 15px;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -133,6 +133,7 @@ body {
 @media only screen and (max-width: 600px) {
 	body {
 		background-color: rgb(50, 204, 255);
+		overflow: scroll;
 	}
 
 	.input {
